--- a/assets/css/rainOnMe.css
+++ b/assets/css/rainOnMe.css
@@ -1,7 +1,7 @@
 h3 {
   text-align: center;
   color: white;
-  background-color: blue;
+  background-image: linear-gradient(to right, blue, purple);
   margin: 20px;
   font-weight: 900;
 }
@@ -17,6 +17,13 @@ h3 {
   width: 100%;
 }
 
+.city {
+  border: 1px solid black;
+  background-color: gray;
+  text-align: center;
+  width: 100%;
+}
+
 #present-weather-info {
   border: 1px solid black;
   padding: 25px 5px;
@@ -24,4 +31,15 @@ h3 {
 
 #future-weather-text {
   font-weight: 600;
+  margin-top: 10px;
+}
+
+.card {
+  background-color: darkblue;
+  color: white;
+  margin-right: 10px;
+}
+
+.card span {
+  margin: 5px 5px;
 }
